syntax = "proto3";

package kioku.server.srv_frontend_api.v1;

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "kioku/srv-frontend-api/v1/srv-frontend-api-kanji.proto";

option go_package = "github.com/tomazis/kioku/server/srv-frontend-api/pkg/srv-frontend-api;srv_frontend_api";

message SentenceTranslation {
    uint64 id = 1;
    uint32 language = 2;
    string translation = 3;
}

message Sentence {
             uint64              id = 1;
             string              origin = 2;
    repeated SentenceTranslation translations = 3;
}

message Word {
             uint64   id = 1;
             string   word = 2;
             string   primary = 3;
             uint32   level = 4;
    repeated Kanji    composition = 5;
    repeated string   alternatives = 6;
    repeated string   readings = 7;
    repeated string   types = 8;
    repeated Sentence sentences = 9;
}

message GetWordV1Request {
    uint64 word_id = 1 [(validate.rules).uint64.gt = 0]; 
}

message GetWordV1Response {
    Word word = 1;
}

message ListWordsByLevelV1Request {
    uint32 level = 1 [(validate.rules).uint32.gt = 0];
}

message ListWordsByKanjiV1Request {
    uint64 kanji_id = 1 [(validate.rules).uint64.gt = 0];
}

message ListWordsV1Response {
    repeated Word words = 1;
}